--- a/public/index.htm
+++ b/public/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-ng-app="MyMediaServer">
 <head>
-    <title>{{$root.title()}}</title>
+    <title data-ng-bind="$root.title()">MyMediaServer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
