Remove unnecessary ng-cloak directive

--- a/public/index.htm
+++ b/public/index.htm
@@ -35,7 +35,7 @@
                     </ul>
                 </div>
             </nav>
-            <div id="content" data-ng-view data-ng-cloak class="span10"></div>
+            <div id="content" data-ng-view class="span10"></div>
         </div>
     </div>
 </body>
