Use the defer tag to load scripts
Since IE < 10 is the only browser which doesn't fully support defer and
we don't care about that anyways it's best to inform the browser of
scripts as early as possible.

--- a/public/index.htm
+++ b/public/index.htm
@@ -6,6 +6,13 @@
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
+
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.min.js" defer></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular-sanitize.min.js" defer></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js" defer></script>
+    <script src="/script.js" defer></script>
+    <script src="/userdata.js" defer></script>
+    <script src="/app.js" defer></script>
 </head>
 
 <body>
@@ -29,12 +36,5 @@
             <div id="content" data-ng-view class="span10"></div>
         </div>
     </div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular-sanitize.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-    <script src="/script.js"></script>
-    <script src="/userdata.js"></script>
-    <script src="/app.js"></script>
 </body>
 </html>
