Move the config file to a more hidden location

--- a/public/index.htm
+++ b/public/index.htm
@@ -11,7 +11,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular-sanitize.min.js" defer></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js" defer></script>
     <script src="/script.js" defer></script>
-    <script src="/userdata.js" defer></script>
+    <script src="/config.js" defer></script>
     <script src="/app.js" defer></script>
 </head>
 
