Move the links in home to My Library

--- a/public/index.htm
+++ b/public/index.htm
@@ -22,11 +22,11 @@
                 <div class="nav-wrapper">
                     <ul class="nav nav-list">
                         <li class="nav-header"><a href="#/">Home</a></li>
-                        <li><a href="#/search">New</a></li>
-                        <li><a href="#/assign">Import</a></li>
                     </ul>
                     <ul class="nav nav-list">
                         <li class="nav-header"><a href="#/entries/">My Library</a></li>
+                        <li><a href="#/search">Add</a></li>
+                        <li><a href="#/assign">Filepaths</a></li>
                     </ul>
                     <ul class="nav nav-list">
                         <li class="nav-header"><a>Settings</a></li>
