--- a/public/index.htm
+++ b/public/index.htm
@@ -2,7 +2,7 @@
 <html data-ng-app="MyMediaServer">
 <head>
     <title data-ng-bind="$root.title()">MyMediaServer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
