--- a/public/index.htm
+++ b/public/index.htm
@@ -4,10 +4,12 @@
     <title data-ng-bind="$root.title()">MyMediaServer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="icon" type="image/png" href="/favicon.png">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-    <link href="/style.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
+    <link rel="stylesheet" href="//releases.flowplayer.org/5.4.2/skin/minimalist.css">
+    <link rel="stylesheet" href="/style.css">
+    
     <script src="http://code.jquery.com/jquery-2.0.2.min.js" defer></script>
+    <script src="//releases.flowplayer.org/5.4.2/flowplayer.min.js" defer></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js" defer></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-sanitize.min.js" defer></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js" defer></script>
