Replace flowplayer with fancyvid

--- a/public/index.htm
+++ b/public/index.htm
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="/style.css">
     
     <script src="http://code.jquery.com/jquery-2.0.2.min.js" defer></script>
-    <script src="//releases.flowplayer.org/5.4.3/flowplayer.min.js" defer></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js" defer></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-sanitize.min.js" defer></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js" defer></script>
     <script src="/script.js" defer></script>
+    <script src="/FancyVid.js" defer></script>
     <script src="/config.js" defer></script>
     <script src="/app.js" defer></script>
 </head>
